@@ -147,7 +147,6 @@ namespace libtorrent
 		, m_connect(time_now())
 		, m_became_uninterested(time_now())
 		, m_became_uninteresting(time_now())
-		, m_free_upload(0)
 		, m_downloaded_at_last_round(0)
 		, m_uploaded_at_last_round(0)
 		, m_uploaded_at_last_unchoke(0)
@@ -1051,18 +1050,6 @@ namespace libtorrent
 #endif
 		return true;
 	}
-	
-	size_type peer_connection::total_free_upload() const
-	{
-		return m_free_upload;
-	}
-
-	void peer_connection::add_free_upload(size_type free_upload)
-	{
-		INVARIANT_CHECK;
-
-		m_free_upload += free_upload;
-	}
 
 	// verifies a piece to see if it is valid (is within a valid range)
 	// and if it can correspond to a request generated by libtorrent.
@@ -1517,10 +1504,7 @@ namespace libtorrent
 				send_unchoke();
 			}
 			else if ((m_ses.num_uploads() < m_ses.settings().unchoke_slots_limit
-					|| m_ses.settings().unchoke_slots_limit < 0)
-				&& (t->ratio() == 0
-					|| share_diff() >= size_type(-free_upload_amount)
-					|| t->is_finished()))
+					|| m_ses.settings().unchoke_slots_limit < 0))
 			{
 				// if the peer is choked and we have upload slots left,
 				// then unchoke it. Another condition that has to be met
@@ -1537,20 +1521,9 @@ namespace libtorrent
 #if defined TORRENT_VERBOSE_LOGGING
 			else
 			{
-				std::string reason;
-				if (m_ses.num_uploads() >= m_ses.settings().unchoke_slots_limit
-					&& m_ses.settings().unchoke_slots_limit >= 0)
-				{
-					peer_log("DID NOT UNCHOKE [ the number of uploads (%d)"
-						"is more than or equal to the limit (%d) ]"
-						, m_ses.num_uploads(), m_ses.settings().unchoke_slots_limit);
-				}
-				else
-				{
-					peer_log("DID NOT UNCHOKE [ the share ratio (%d) is <= "
-						"free_upload_amount (%d) and we are not seeding and the ratio (%d) is non-zero"
-						, share_diff(), int(free_upload_amount), t->ratio());
-				}
+				peer_log("DID NOT UNCHOKE [ the number of uploads (%d)"
+					"is more than or equal to the limit (%d) ]"
+					, m_ses.num_uploads(), m_ses.settings().unchoke_slots_limit);
 			}
 #endif
 		}
@@ -1604,20 +1577,6 @@ namespace libtorrent
 				}
 				m_ses.choke_peer(*this);
 				m_ses.m_unchoke_time_scaler = 0;
-			}
-		}
-
-		if (t->ratio() != 0.f)
-		{
-			TORRENT_ASSERT(share_diff() < (std::numeric_limits<size_type>::max)());
-			size_type diff = share_diff();
-			if (diff > 0 && is_seed())
-			{
-				// the peer is a seed and has sent
-				// us more than we have sent it back.
-				// consider the download as free download
-				t->add_free_upload(diff);
-				add_free_upload(-diff);
 			}
 		}
 
@@ -3778,25 +3737,6 @@ namespace libtorrent
 		m_bandwidth_channel[download_channel].throttle(m_download_limit);
 	}
 
-	size_type peer_connection::share_diff() const
-	{
-		INVARIANT_CHECK;
-
-		boost::shared_ptr<torrent> t = m_torrent.lock();
-		TORRENT_ASSERT(t);
-
-		float ratio = t->ratio();
-
-		// if we have an infinite ratio, just say we have downloaded
-		// much more than we have uploaded. And we'll keep uploading.
-		if (ratio == 0.f)
-			return (std::numeric_limits<size_type>::max)();
-
-		return m_free_upload
-			+ static_cast<size_type>(m_statistics.total_payload_download() * ratio)
-			- m_statistics.total_payload_upload();
-	}
-
 	bool peer_connection::ignore_unchoke_slots() const
 	{
 		return m_ignore_unchoke_slots
@@ -3863,8 +3803,6 @@ namespace libtorrent
 			p.download_limit = -1;
 		else
 			p.download_limit = m_bandwidth_channel[download_channel].throttle();
-
-		p.load_balancing = total_free_upload();
 
 		p.download_queue_length = int(download_queue().size() + m_request_queue.size());
 		p.requests_in_buffer = int(m_requests_in_buffer.size() + m_request_queue.size());
@@ -4385,48 +4323,6 @@ namespace libtorrent
 #endif
 
 			snub_peer();
-		}
-
-		// If the client sends more data
-		// we send it data faster, otherwise, slower.
-		// It will also depend on how much data the
-		// client has sent us. This is the mean to
-		// maintain the share ratio given by m_ratio
-		// with all peers.
-
-		if (t->is_upload_only() || is_choked() || t->ratio() == 0.0f)
-		{
-			// if we have downloaded more than one piece more
-			// than we have uploaded OR if we are a seed
-			// have an unlimited upload rate
-			m_bandwidth_channel[upload_channel].throttle(m_upload_limit);
-		}
-		else
-		{
-			size_type bias = 0x10000 + 2 * t->block_size() + m_free_upload;
-
-			const int break_even_time = 15; // seconds.
-			size_type have_uploaded = m_statistics.total_payload_upload();
-			size_type have_downloaded = m_statistics.total_payload_download();
-			int download_speed = m_statistics.download_rate();
-
-			size_type soon_downloaded =
-				have_downloaded + (size_type)(download_speed * (break_even_time + break_even_time / 2));
-
-			if (t->ratio() != 1.f)
-				soon_downloaded = size_type(soon_downloaded * t->ratio());
-
-			TORRENT_ASSERT((soon_downloaded - have_uploaded + bias) / break_even_time < INT_MAX);
-			int upload_speed_limit = int((soon_downloaded - have_uploaded
-				+ bias) / break_even_time);
-
-			if (m_upload_limit > 0 && m_upload_limit < upload_speed_limit)
-				upload_speed_limit = m_upload_limit;
-
-			upload_speed_limit = (std::min)(upload_speed_limit, (std::numeric_limits<int>::max)());
-
-			m_bandwidth_channel[upload_channel].throttle(
-				(std::min)((std::max)(upload_speed_limit, 10), m_upload_limit));
 		}
 
 		// update once every minute
